2012-01-09  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.oracle.sql
	  pandoradb.postgreSQL.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Added migration 
	script for 4.1 version.

2012-01-09  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/netflow/nf_item_list.php
	  godmode/netflow/nf_report_item.php
	  pandoradb.sql: Fixed editing and deleting netflow filters.

2012-01-05  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_graph.php,
	  include/functions_netflow.php,
	  operation/netflow/nf_view.php: Fixed several netflow charts and
	  improved performance.

2012-01-05  Vanessa Gil  <vanessa.gil@artica.es>
	* include/functions_graph.php
          include/functions_netflow.php
	  operation/netflow/nf_view.php
	  godmode/netflow/nf_item_list: Graph changes.

2012-01-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 include/functions_forecast.php
	 include/functions_reporting.php: Fixed graphical representation of
	 intervals in projection graphs.

2012-01-03  Vanessa Gil  <vanessa.gil@artica.es>
	* include/functions_graph.php
	  operation/netflow/nf_view.php: Graph changes.

2012-01-03  Sergio Martin <sergio.martin@artica.es>

	* include/functions_users.php
	include/auth/mysql.php
	pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql
	godmode/users/user_list.php: Added to users the 
	disable/enable feature

2012-01-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb.data.postgreSQL.sql
	 pandoradb.postgreSQL.sql: Fixed queries in these scripts.

2012-01-02  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.oracle.sql: Added netflow tables.

2012-01-02  Vanessa Gil  <vanessa.gil@artica.es>
	* operation/netflow/nf_view.php