@@ -1,3 +1,8 @@
+2012-01-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+	* include/functions_api.php: Added new serialized parameter in 
+	set_create_network_module function from api. Without it Web console 
+	interface module edit view crash.
+
 2012-01-09  Vanessa Gil  <vanessa.gil@artica.es>
 	* pandoradb.oracle.sql
 	  pandoradb.postgreSQL.sql
